fixed z-index for post page

--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,7 @@ i.fa {
 .post-content {
     position: relative;
     top: 135px;
+    z-index: 3;
 
     .post-meta {
         padding: 10px 0 10px 5px;
